crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__tokenize_trivia.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokens()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Comment,
        range: 0..9,
    },
    SimpleToken {
        kind: Newline,
        range: 9..10,
    },
    SimpleToken {
        kind: Whitespace,
        range: 10..14,
    },
    SimpleToken {
        kind: Comment,
        range: 14..23,
    },
]
