crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__tricky_unicode.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokens()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Name,
        range: 0..6,
    },
]
